cupt (0.6.4~) UNRELEASED; urgency=low

  * Cupt:
    - Config:
      - Recognize new APT 'acquire::compressiontypes::*' variables.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Fri, 28 Aug 2009 23:28:23 +0300

cupt (0.6.3) unstable; urgency=medium

  * cupt:
    - Don't crash on actions confirmation when the user answer is not
      available (end of file, read error etc.)
  * Cupt:
    - Download:
      - Methods/Curl:
        - Enable sharing cookies database and DNS cache for multiple
          downloads.
    - System:
      - Resolvers/Native:
        - Fixed a very tricky regression since 0.6.0 with passing status of
          packages to worker that causes the situation that some of
          automatically installed packages are not marked as such. If you
          installed something big with 0.6.{0-2} libcupt-perl versions, you
          will need to go and mark needed packages as automatically installed
          manually (e.g. using 'cupt markauto'). Sorry for the inconvenience.
          The urgency is set to 'medium' because of this fix.
  * doc/cupt_vs_apt:
    - Renewed to reflect changes in apt 0.7.23.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Thu, 27 Aug 2009 22:11:20 +0300

cupt (0.6.2) unstable; urgency=low

  * cupt:
    - New 'dist-upgrade' subcommand.
    - 'search':
      - Fixed the crash when some short description is not present.
        Thanks to James Vega. (Closes: #543598)
    - 'show':
      - Fixed the crash when some short description is not present.
  * Cupt:
    - System:
      - Worker:
        - Significant speed-up of run-time pre-dependency check.
        - Significant speed-up of processing the virtual action dependencies.
    - Cache:
      - Support 'none' value of the 'apt::acquire::translation' option.
    - Download:
      - Methods/Debdelta:
        - Explicitly pass new '--accept-unsigned' option to debdelta. We don't
          need debdelta signatures as resulted package is still checked using